[package]
name = "day1"
version = "0.1.0"
authors = ["Felix Rubio <felix@airtame.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
  criterion = "0.1.1"

[dependencies]

 [[bench]]
    name = "my_benchmark"
    harness = false
